--- a/android/src/main/res/layout/logo_float_layout.xml
+++ b/android/src/main/res/layout/logo_float_layout.xml
@@ -15,24 +15,25 @@
 
         <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="wrap_content">
 
             <ImageView
                 android:layout_width="@dimen/logo_float_icon_size"
                 android:layout_height="@dimen/logo_float_icon_size"
                 android:layout_marginTop="8dp"
                 android:background="@drawable/logo_shape"
-                android:src="@drawable/logo_negative_symbol"
-                android:padding="10dp"/>
+                android:padding="10dp"
+                android:src="@drawable/logo_negative_symbol" />
 
             <TextView
+                android:animateLayoutChanges="true"
                 android:id="@+id/badge_textview"
                 android:layout_width="wrap_content"
+                android:visibility="gone"
                 android:layout_height="25dp"
                 android:layout_marginLeft="40dp"
                 android:background="@android:drawable/ic_notification_overlay"
-                android:text="204"
+                android:text="0"
                 android:textAlignment="center"
                 android:textColor="#FFF"
                 android:textSize="12sp"
