--- a/android/src/main/res/layout/logo_float_layout.xml
+++ b/android/src/main/res/layout/logo_float_layout.xml
@@ -18,6 +18,7 @@
             android:layout_height="wrap_content">
 
             <ImageView
+                android:id="@+id/icon_imageview"
                 android:layout_width="@dimen/logo_float_icon_size"
                 android:layout_height="@dimen/logo_float_icon_size"
                 android:layout_marginTop="8dp"
